--- a/src/share/conf/example.conf
+++ b/src/share/conf/example.conf
@@ -45,9 +45,10 @@ _OPT=\
 "
 
 
+###################
+## DO NOT REMOVE ##
 
 # # # #
 # clean up the multiline $_OPT to single line $_OPT
 
-_OPT=`echo $_OPT | sed -E 's/(\s|\r|\n)+/ /g'`
-
+_OPT=$(echo $_OPT | sed -E 's/(\s|\r|\n)+/ /g')
